trying to fix the overflow issue

--- a/admin/src/components/RegisterTeamMember.css
+++ b/admin/src/components/RegisterTeamMember.css
@@ -5,10 +5,12 @@
   box-sizing: border-box;
 }
 
-body {
+html, body {
   font-family: 'Arial', sans-serif;
   background-color: #f4f6f9;
   margin: 60px;
+  height: 100%;
+  overflow-y: auto;
 }
 
 
@@ -27,8 +29,6 @@ body {
   padding: 30px;
   width: 100%;
   max-width: 100%;
-   overflow-y: auto;
-  max-height: 90vh;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
